# proj_repo-app

./: CMakeLists.txt  README.md
cmake/: FindApp.cmake
inc/: app.h
inc_pub/: app_api.h
src/: app.c
